Work on PDP and footer styling * PDP subscribe discount pricing working correctly, fix add to cart button styling * Disable related products section globally * Remove sticky sidebar * Fix copyright footer wrapping

--- a/wp-content/themes/livecomplete/style.css
+++ b/wp-content/themes/livecomplete/style.css
@@ -661,9 +661,9 @@ ul.flat-support li:first-child:after {
 #masthead ul.header-icon li span.quantity {
     position: absolute;
     color: var(--nav-h-color);
-    height: auto;
-    line-height: 20px;
+    height: 20px;
     width: 20px;
+    line-height: 20px;
     font-size: 11px;
     border-radius: 50%;
     -webkit-border-radius: 50%;
